Clean-up. Fix stupid error – 'perserve' vs. 'preserve'. Now backface issue solved on iOS.

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,28 +1,23 @@
-/* Less Framework 4
- * http://lessframework.com
- * by Joni Korpi
- * License: http://creativecommons.org/licenses/MIT/ */
-
-// Less Framework Compass Plugin
-// by William Wells <less@hapa.me>
-// https://github.com/willhw/compass-less-plugin
-
-$debug: true;
+$debug: false;
 $less-grid-padding: false;
 
 @import "compass";
+@import "compass/reset";
 
-@import "less/reset";
-@import "less/framework";
-@import "less/typography/16px";
+html, body {
+    width: 100%;
+    height: 100%;
+}
 
-@import "partials/global";
+body {
+    background: #000;
+    color: #FFF;
+    -webkit-text-size-adjust: 100%;
+    height: 100%;
+    overflow: hidden;
+    font-family: "Helvetica Neue", serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+}
 
-@import "partials/elements/add2home";
 @import "partials/elements/flip";
-
-@import "partials/default";
-@import "partials/tablet";
-@import "partials/mobile";
-@import "partials/wide-mobile";
-@import "partials/high-px-ratio";
