--- a/sass/partials/elements/_flip.scss
+++ b/sass/partials/elements/_flip.scss
@@ -1,56 +1,69 @@
+.card .face.back {
+    display: none;
+}
+
 .container {
     position: relative;
-    width: 320px;
-    height: 480px;
+    width: 100%;
+    height: 100%;
     @include perspective(1000);
     z-index: 1;
-    
-    &:hover, &.flip {
-        .card {
-            -webkit-animation-name: flip;
-            -webkit-animation-duration: 2s;
-            -webkit-animation-iteration-count: 1;
-            -webkit-animation-direction: alternate;
-            -webkit-animation-fill-mode: forwards;
-        }
-    }
 }
 
 .card {
     width: 100%;
     height: 100%;
-    background: #FFF;
     position: relative;
-    @include transform-style(perserve-3d);
-    background: blue;
+    @include transform-style(preserve-3d);
     
     .face {
         width: 100%;
         height: 100%;
         position: absolute;
         @include backface-visibility(hidden);
+        text-align: center;
+        line-height: 72px;
+        font-size: 36px;
+        
+        &.front {
+            background: #900;
+            @include transform(rotateY(0deg));
+        }
+        
+        &.back {
+            background: #090;
+            @include transform(rotateY(180deg));
+            display: block;
+        }
     }
     
-    .front {
-        background: #900;
+    &.flip-forward {
+        -webkit-animation-name: flip-forward;
+        -webkit-animation-duration: 2s;
+        -webkit-animation-iteration-count: 1;
+        -webkit-animation-direction: alternate;
+        -webkit-animation-fill-mode: forwards;
     }
     
-    .back {
-        background: #090;
-        @include rotateY(180deg);
+    &.flip-backward {
+        -webkit-animation-name: flip-backward;
+        -webkit-animation-duration: 2s;
+        -webkit-animation-iteration-count: 1;
+        -webkit-animation-direction: alternate;
+        -webkit-animation-fill-mode: forwards;
     }
 }
 
-@-webkit-keyframes flip {
+@-webkit-keyframes flip-forward {
     0% {
         @include transform(rotateY(0deg) scale(1));
     }
     
-    33% {
+    25% {
         @include transform(rotateY(0deg) scale(.75));
     }
     
-    67% {
+    75% {
         @include transform(rotateY(180deg) scale(.75));
     }
     
@@ -59,16 +72,16 @@
     }
 }
 
-@-webkit-keyframes flip-back {
+@-webkit-keyframes flip-backward {
     100% {
         @include transform(rotateY(0deg) scale(1));
     }
     
-    67% {
+    75% {
         @include transform(rotateY(0deg) scale(.75));
     }
     
-    33% {
+    25% {
         @include transform(rotateY(180deg) scale(.75));
     }
     
